# network-monitor

./: CMakeLists.txt  conanfile.py
include/network-monitor/: websocket-client.hpp
src/: main.cpp  websocket-client.cpp  websocket-client.hpp
tests/: main.cpp  test-websocket-client.cpp
